[package]
name = "lum_event"
version = "0.1.4"
authors = ["Torben Schweren"]
edition = "2021"
rust-version = "1.82.0"
description = "lum framework's event library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_event"
license = "MIT"
keywords = ["lum", "framework", "event", "events", "observable"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
lum_boxtypes = "0.1.1"
lum_libs = "0.1.5"
lum_log = "0.2.0"
thiserror = "2.0.3"
