[package]
name = "lum_event"
version = "0.2.2"
authors = ["Torben Schweren"]
edition = "2024"
rust-version = "1.85.0"
description = "lum framework's event library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_event"
license = "MIT"
keywords = ["lum", "framework", "event", "events", "observable"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
lum_boxtypes = "0.2.0"
lum_libs = "0.2.4"
lum_log = "0.2.3"
thiserror = "2.0.12"
